[workspace]
# members = ["core", "tui", "web", "app", "cli"]
members = ["core"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
