[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
url = { version = "2.5", features = ["serde"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
